May 24 2008 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17014
  - Made Makefile.PL require perl-5.6.0 and above.

May 22 2008 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17013
  - Now building only on perl-5.6.0 and above.
    - Added the line to the Build.PL

Jan 25 2008 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17012
  - Added some examples to the examples/ directory.
  - Applied the patch from hchbaw to fix:
    -//rt.cpan.org/Public/Bug/Display.html?id=32638
    - Thanks to hchbaw

Dec 25 2007 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17011
  - added 'warnings' to the dependencies in the Build.PL/Makefile.PL as
    we are using it.
  - changed the author in Makefile.PL/Build.PL from GBARR to SHLOMIF:
    - http://rt.cpan.org/Public/Bug/Display.html?id=31861
    - Thanks to Michael Schwern
  - added an empty line between the "__END__" and "=head1" in
  lib/Error/Simple.pm for more pedantic POD parsers.

Nov 22 2007 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17010
  - moved the first Error->new() POD portion over to the POD at the bottom, and
    deleted the second, identical POD portion.
  - closing http://rt.cpan.org/Public/Bug/Display.html?id=30906 
    ( "Duplicate Error->new() documentation" )

Aug 28 2007 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17009
  - fixed http://rt.cpan.org/Public/Bug/Display.html?id=20643 by applying
  a modified version of the patch by MAREKR with the t/12wrong-error-var.t
  regression test.

Oct 25 2006 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17008
  - Added the empty PL_FILES paramaeter to ExtUtils::MakeMaker so it won't
    attempt to run Build.PL.

Oct 18 2006 <shlomif@iglu.org.il> (Shlomi Fish)

  Error.pm #0.17007
  - Added the "COPYRIGHT" section to the POD with the correct
    license. (several people have asked me about what the license is.)
  - Added the Build.PL file so we'll have license meta data in the
  distribution.
